<resources>
    <string name="app_name">FakeMeh?</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="already">Already have an account?</string>
    <string name="dont">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_login_text">Login</string>
    <string name="action_logout_text">Logout</string>

    <string name="post_title_hint">Enter Title Here</string>
    <string name="post_body_hint">Type Post Here</string>
    <string name="new_post_btn_hint">Post</string>

    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>

    <string name="your_posts">Your posts</string>
    <string name="change_password">Change Password</string>

    <string name="enter_registered_email">Enter the email registered to your account</string>
    <string name="send_reset_email">Send Reset Email</string>

    <string name="never_mind">Never Mind</string>
    <string name="title_activity_nav">Fake Meh?</string>
    <string name="title_home">Home</string>
    <string name="title_top">Top</string>
    <string name="title_news">News</string>
    <string name="title_resource">Resource</string>
    <string name="title_account">Account</string>

</resources>