<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_top"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_top" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_baseline_library_books_24"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_resource"
        android:icon="@drawable/ic_baseline_collections_bookmark_24"
        android:title="@string/title_resource" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_account" />

</menu>