<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:text="@string/change_password"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="200dp"/>

        <EditText
            android:id="@+id/changePasswordEmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_registered_email" />

        <Button
            android:id="@+id/changePasswordSendResetEmailButton"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/send_reset_email"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/changePasswordBackButton"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/never_mind"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>