<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPostActivity">

    <Toolbar
        android:id="@+id/new_post_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_post_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/post_title_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_post_toolbar"
        app:srcCompat="@drawable/post_placeholder">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_post_body_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_post_title_layout"
        android:background="@drawable/border_style">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_post_body"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:padding="4dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:hint="@string/post_body_hint"
            android:background="@null"
            android:gravity="top"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/post_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="16dp"
        android:text="@string/new_post_btn_hint"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_post_body_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>